[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphs_tneal36"
version = "0.0.1"
authors = [
  { name="Taylor Neal", email="author@example.com" },
]
description = "A Python library for graph algorithms including Dijkstra's shortest path."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]